# riigikogulased

./: .env.example  .gitignore  CLAUDE.md  README.md  code-review-2026-07-01.md  migra.md  package.json  pnpm-lock.yaml  progress-log.md  progress.md  statistics_implementation_plan.md  todo.md
apps/scraper/: .env.example  README.md  pyproject.toml
apps/scraper/cache/api/: plenary-members-extra.json  plenary-members.json  sessions.json  speech-stats.json
apps/scraper/cache/kuluhuvitised/: koond_2023.csv  koond_2024.csv  koond_2025.csv  liikide_2023.csv  liikide_2024.csv  liikide_2025.csv
apps/scraper/cache/profiles/: profile_tags.json
apps/scraper/fixtures/: members.html  vote_detail.html  vote_list.html
apps/scraper/fixtures/api/: plenary_members.json  sessions.json  voting_detail.json
apps/scraper/fixtures/ariregister/: README.md  history_grunthal.html  history_laneman.html  search_collision.html  search_kunnas.html  search_laneman.html
apps/scraper/fixtures/profiles/: aab.html  akkermann.html  alender.html
apps/scraper/poc/declarations/: FINDINGS.md  sample_declaration_body.html  sample_riigiteataja_322122010005.json
apps/scraper/poc/kuluhyvitised/: FINDINGS.md  api-docs.json  api-paths.txt  helme_api.json  palgaandmed.html  rup_article.html
apps/scraper/src/parteidistsipliin_scraper/: __main__.py  api_cache.py  api_client.py  api_models.py  api_parse.py  ariregister_cache.py  ariregister_client.py  ariregister_models.py  ariregister_parse.py  cache.py  cli.py  client.py  db.py  election_cache.py  election_parse.py  enrich.py  eurovoc_cache.py  lemmatize.py  (+13 more)
apps/scraper/tests/: test_api_cache.py  test_api_client.py  test_api_models.py  test_api_parse.py  test_ariregister_cache.py  test_ariregister_client.py  test_ariregister_models.py  test_ariregister_parse.py  test_cache.py  test_cli.py  test_election_parse.py  test_enrich.py  test_eurovoc_cache.py  test_eurovoc_fixtures.py  test_eurovoc_models.py  test_expense_parse.py  test_migrations.py  test_parsers.py  test_photo.py  test_profile_parse.py  test_signature.py  test_verbatim_parse.py
(+1076 files in other folders)
