[project]
name = "parteidistsipliin-scraper"
version = "0.1.0"
description = "Scrapes Riigikogu vote archive into Postgres."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pillow>=10.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Estonian lemmatisation for the stenogram speech search (the `verbatims` command). Heavy
# (pulls Vabamorf) and not needed by the vote cron, so it is opt-in: pip install '.[nlp]'.
nlp = [
    "estnltk>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
parteidistsipliin-scraper = "parteidistsipliin_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parteidistsipliin_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
